fix(responsive): fix scroll description on mobile

--- a/qfisch.fr/src/components/PersonalInfo.scss
+++ b/qfisch.fr/src/components/PersonalInfo.scss
@@ -102,6 +102,7 @@
             max-width: none;
             padding: 2rem 0;
             min-height: auto;
+            height: auto;
         }
     }
 }
